test/fail/not-static.as
import "lib/not-static.as"
